--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <main>
             <aside id="asideRight">
+                <marquee stop in the top id="asideRight"  bgcolor="#141e30" height="500px"  behavior="scroll" loop="" direction="up" hspace="5%"  vspace="10px" scrollamount="4" >
                 <article id="articleRight" style="height: 120px;">
                     <div id="divRight">
                         <h3><strong>Hi,</strong> I'm Mohammad Qaddoura <br> I'm 21 years. <br> I'm living in Gaza strip.</h3>
@@ -68,13 +69,7 @@
                         <p>- Programming Languages:<strong>HTML5, CSS</strong><p>
                     </div>
                 </article>
-                <article id="articleRight">
-                    <div id="divRight">
-                        <h2>Links</h2>
-                        <h4 id="Links"><a id="LinksA" target="_blank"  href="https://github.com/mohqadd/My-profil-GSG"> My profile code</a></h4>
-                        <h4 id="Links"><a id="LinksA" target="_blank" href="https://github.com/gazaskygeeks/code-academy/blob/master/pre-requisites/projects/project6.md">My JS project: ALarm clock ⏰</a></h4>
-                        <h4 id="Links"><a id="LinksA" target="_blank" href="https://www.codewars.com/users/mohqadd">Codewars</a></h4>
-                        <h4 id="Links"><a id="LinksA" target="_blank" href="https://www.freecodecamp.org/mohqadd">FreeCodeCamp</a></h4>
+
                     </div>
                 </article>
                 <article id="articleRight">
@@ -87,34 +82,42 @@
                     <br>
                     <a href="https://gazaskygeeks.com/" target="_blank"><img width="200px" style="float: left; " src="Gaza Sky Geeks.png" alt=""></a>
                 </article>
+            </marquee>
+            </div>
             </aside>
 
             <aside id="asideLeft">
-                <article id="articleLeft">
+                <article id="articleRight">
+                    <div id="divRight">
+                        <h2>Links</h2>
+                        <h4 id="Links"><a id="LinksA" target="_blank"  href="https://github.com/mohqadd/My-profil-GSG"> My profile code</a></h4>
+                        <h4 id="Links"><a id="LinksA" target="_blank" href="https://github.com/gazaskygeeks/code-academy/blob/master/pre-requisites/projects/project6.md">My JS project: ALarm clock ⏰</a></h4>
+                        <h4 id="Links"><a id="LinksA" target="_blank" href="https://www.codewars.com/users/mohqadd">Codewars</a></h4>
+                        <h4 id="Links"><a id="LinksA" target="_blank" href="https://www.freecodecamp.org/mohqadd">FreeCodeCamp</a></h4>
+                <!--<article id="articleLeft">
                     <div id="divLeft">
-                        <!--<h3>Project 1</h3>-->
+                        <h3>Project 1</h3>
                         <a href="https://github.com/mohqadd/AlJazeera-English" target="_blank"><img src="aside/Screenshot 1.png" alt="" ></a>   
                         <h2 id="code"><a target="_blank" style="text-decoration: none rgb(255, 255, 255); color: white;" href="https://github.com/mohqadd/McDonalds">src code</a></h2>                     
                     </div>
                 </article>
                 <article id="articleLeft">
                     <div id="divLeft">
-                        <!--<h3>Project 1</h3>-->
+                        <!--<h3>Project 1</h3>
                         <a href=" https://mohqadd.github.io/McDonalds/" target="_blank"><img src="aside/Screenshot 2.png" alt="" ></a> 
                         <h2 id="code"><a target="_blank" style="text-decoration: none rgb(255, 255, 255); color: white;" href="https://github.com/mohqadd/McDonalds">src code</a></h2>                     
                     </div>
-                </article>
+                </article>-->
             </aside>
         </main>
 
         <footer>
-                <div id="contact">
-                    <a target="_blank" href="https://www.facebook.com/moh.qadd/"> <img src="img/facebook.png"  alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/dark_life_ix/"> <img src="img/instagram.png" alt=""></a>
-                    <a target="_blank" href="https://twitter.com/moh19qaddoura"> <img src="img/twitter.png" alt=""></a>
-                    <!--<a target="_blank" href=""> <img src="" alt=""></a>-->
-                </div>
+            <div id="contact">
+                <a target="_blank" href="https://www.facebook.com/moh.qadd/"> <img src="img/facebook.png"  alt=""></a>
+                <a target="_blank" href="https://www.instagram.com/dark_life_ix/"> <img src="img/instagram.png" alt=""></a>
+                <!--<a target="_blank" href=""> <img src="" alt=""></a>-->
         </footer>
+        
     </body>
 </html>
 
