--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </header>
 
         <main>
-            <aside id="asideRight">
-                <marquee stop in the top id="asideRight"  bgcolor="#141e30" height="500px"  behavior="scroll" loop="" direction="up" hspace="5%"  vspace="10px" scrollamount="4" >
+            <aside id="asideRight" style="padding-right: 50px;">
+                <marquee style="position: fixed;" stop in the top id="asideRight"  bgcolor="#243b55" height="600px"  behavior="scroll" loop="" direction="up" hspace="5%"  vspace="10px" scrollamount="2" >
                 <article id="articleRight" style="height: 120px;">
                     <div id="divRight">
                         <h3><strong>Hi,</strong> I'm Mohammad Qaddoura <br> I'm 21 years. <br> I'm living in Gaza strip.</h3>
@@ -86,7 +86,7 @@
             </div>
             </aside>
 
-            <aside id="asideLeft">
+            <aside id="asideLeft" >
                 <article id="articleRight">
                     <div id="divRight">
                         <h2>Links</h2>
@@ -94,20 +94,21 @@
                         <h4 id="Links"><a id="LinksA" target="_blank" href="https://github.com/gazaskygeeks/code-academy/blob/master/pre-requisites/projects/project6.md">My JS project: ALarm clock ⏰</a></h4>
                         <h4 id="Links"><a id="LinksA" target="_blank" href="https://www.codewars.com/users/mohqadd">Codewars</a></h4>
                         <h4 id="Links"><a id="LinksA" target="_blank" href="https://www.freecodecamp.org/mohqadd">FreeCodeCamp</a></h4>
-                <!--<article id="articleLeft">
+                    </article>
+                
+                        <article id="articleLeft" style="padding-top: 0px;">
                     <div id="divLeft">
-                        <h3>Project 1</h3>
                         <a href="https://github.com/mohqadd/AlJazeera-English" target="_blank"><img src="aside/Screenshot 1.png" alt="" ></a>   
                         <h2 id="code"><a target="_blank" style="text-decoration: none rgb(255, 255, 255); color: white;" href="https://github.com/mohqadd/McDonalds">src code</a></h2>                     
                     </div>
                 </article>
-                <article id="articleLeft">
+                
+                <article id="articleLeft" style="padding-bottom: 150px;">
                     <div id="divLeft">
-                        <!--<h3>Project 1</h3>
                         <a href=" https://mohqadd.github.io/McDonalds/" target="_blank"><img src="aside/Screenshot 2.png" alt="" ></a> 
                         <h2 id="code"><a target="_blank" style="text-decoration: none rgb(255, 255, 255); color: white;" href="https://github.com/mohqadd/McDonalds">src code</a></h2>                     
                     </div>
-                </article>-->
+                </article>
             </aside>
         </main>
 
